Added product details functionality

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -41,6 +41,8 @@ body {
     font-family: 'Waterfall';
     text-decoration: underline solid #f4aeb0;
     text-decoration-skip-ink: none;
+    font-size: 2rem;
+    margin-top: 0.5rem;
 }
 
 .main-logo-link {
@@ -79,6 +81,16 @@ body {
     border: 1px solid black !important;
 }
 
+.overlay {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
@@ -100,5 +112,24 @@ body {
 
     .header-container {
         padding-top: 164px;
+    }
+}
+
+/* make title smaller before drop down menu*/
+@media (max-width: 1145px) {
+    .logo{
+        font-size: 1.5rem;
+        color: green;
+    }
+}
+
+/* pad the top a bit when navbar is collapsed on mobile */
+@media (max-width: 991px) {
+    .header-container {
+        padding-top: 116px;
+    }
+
+    body {
+        height: calc(100vh - 116px);
     }
 }
