--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,25 +8,27 @@
                 <a href="" class="dropdown-item">By Price</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Products</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Products</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-black mr-5" href="#" id="wax-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Wax Items
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+            <div class="dropdown-menu border-0" aria-labelledby="wax-link">
+                <a href="" class="dropdown-item">All</a>
                 <a href="" class="dropdown-item">Wax melts</a>
                 <a href="" class="dropdown-item">Candles</a>
             </div>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="font-weight-bold nav-link text-black mr-5" href="#" id="fragrance-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Fragrances
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+            <div class="dropdown-menu border-0" aria-labelledby="fragrance-link">
+                <a href="" class="dropdown-item">All</a>
                 <a href="" class="dropdown-item">Eau de Parfum</a>
                 <a href="" class="dropdown-item">Eau de Toilette</a>
             </div>
