--- a/static/css/base.css
+++ b/static/css/base.css
@@ -99,6 +99,17 @@ span.badge:hover {
     background-color: #f4aeb0;
 }
 
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
+}
 
 /* -------------------------------- Media Queries */
 
