--- a/templates/base.html
+++ b/templates/base.html
@@ -106,7 +106,7 @@
         </div>
         <div id="delivery-banner" class="row text-center">
             <div class="col banner">
-                <h4 class="my-1">Free delivery on orders over ${{ free_shipping_threshold }}!</h4>                
+                <h4 class="my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>                
             </div>            
         </div>
     </header>
