--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,7 +69,7 @@ body {
 .btn-outline-black:hover,
 .btn-outline-black:active,
 .btn-outline-black:focus {
-    background: black;
+    background:#f4aeb0;
     color: white !important;
 }
 
