--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+<!--{% extends "base.html" %}
 {% load static %}
 
 {% block page_header %}
@@ -7,9 +7,9 @@
             <div class="col"></div>
         </div>
     </div>
-{% endblock %}
+{% endblock %}-->
 
-<!--{% block content %}
+{% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -22,7 +22,7 @@
                 {% endfor %}
                 <hr class="w-50 mb-1">
             </div>
-        </div>-->
+        </div>
         <!--<div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
