--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,7 +9,7 @@
     </div>
 {% endblock %}-->
 
-{% block content %}
+<!--{% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -22,7 +22,7 @@
                 {% endfor %}
                 <hr class="w-50 mb-1">
             </div>
-        </div>
+        </div>-->
         <!--<div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
@@ -156,3 +156,5 @@
         })
     </script>
 {% endblock %}-->
+
+<div><H1>Test</H1></div>
