--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,4 +1,4 @@
-<!--{% extends "base.html" %}
+{% extends "base.html" %}
 {% load static %}
 
 {% block page_header %}
@@ -7,9 +7,9 @@
             <div class="col"></div>
         </div>
     </div>
-{% endblock %}-->
+{% endblock %}
 
-<!--{% block content %}
+{% block content %}
     <div class="overlay"></div>
     <div class="container-fluid">
         <div class="row">
@@ -22,8 +22,8 @@
                 {% endfor %}
                 <hr class="w-50 mb-1">
             </div>
-        </div>-->
-        <!--<div class="row">
+        </div>
+        <div class="row">
             <div class="product-container col-10 offset-1">
                 <div class="row mt-1 mb-2">
                     <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
@@ -49,8 +49,8 @@
                             {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
                     </div>
-                </div>-->
-                <!--<div class="row">
+                </div>
+                <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
@@ -123,9 +123,9 @@
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>	
     </div>
-{% endblock %}-->
+{% endblock %}
 
-<!--{% block postloadjs %}
+{% block postloadjs %}
     {{ block.super }}
     <script type="text/javascript">
 		$('.btt-link').click(function(e) {
@@ -155,6 +155,4 @@
             }
         })
     </script>
-{% endblock %}-->
-
-<div><H1>Test</H1></div>
+{% endblock %}
