--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
 
     {% block meta %}
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
+        <meta name="description" content="A Frangrance eccomermce store where shoppers can buy">
+        <meta name="keywords" content="candles, wax melts, fragrances, perfumes">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock %}
 
@@ -142,6 +143,46 @@
     </script>
     {% endblock %}
 
-    
+    <!-- Site footer -->
+    <footer class="site-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-12 col-md-6">
+              <h6>About</h6>
+              <p class="text-justify">We are a group that likes to support local Irish businesses and smell nice while doing it.</p>
+              <p class="text-justify">We aim to showcase and sell some of the best homemade fragrances found around Ireland</p>
+            </div>
+  
+            <div class="col-xs-6 col-md-3">
+              <h6>Categories</h6>
+              <ul class="footer-links">
+                <li><a href="http://scanfcode.com/category/c-language/">Waxmelts</a></li>
+                <li><a href="http://scanfcode.com/category/front-end-development/">Candles</a></li>
+                <li><a href="http://scanfcode.com/category/back-end-development/">Eau de Parfum</a></li>
+                <li><a href="http://scanfcode.com/category/java-programming-language/">Eau de Toilette</a></li>
+                <li><a href="http://scanfcode.com/category/java-programming-language/">Special Offers</a></li>
+              </ul>
+            </div>
+          </div>
+          <hr>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-8 col-sm-6 col-xs-12">
+              <p class="copyright-text">2022 Copyright &copy;  All Rights Reserved
+              </p>
+            </div>
+  
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <ul class="social-icons">
+                <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+                <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+                <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+                <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+              </ul>
+            </div>
+          </div>
+        </div>
+  </footer>
   </body>
 </html>
