--- a/static/css/base.css
+++ b/static/css/base.css
@@ -533,10 +533,59 @@ input[name='q']::placeholder {
 }
 @media (max-width:767px)
 {
-  .social-icons li.title
-  {
-    display:block;
-    margin-right:0;
-    font-weight:600
-  }
+.social-icons li.title
+{
+  display:block;
+  margin-right:0;
+  font-weight:600
+}
+}
+
+/* Contact Us Form */
+
+.contact-container {
+  width: 100%;
+  height: 100vh;
+  background: blue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-form {
+  background: white;
+  display:flex;
+  flex-direction: column;
+  padding: 2vw 4vw;
+  width: 90%;
+  max-width: 600px;
+  border-radius: 10px;
+}
+
+.contact-form h3 {
+  color: grey;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+.contact-form input, .contact-form textarea {
+  border:0;
+  margin: 10px 0;
+  padding: 20px;
+  outline: none;
+  background: darkblue;
+  font-size: 16px;
+}
+
+.contact-form button {
+  padding: 15px;
+  background: red;
+  color: white;
+  font-size: 18px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  width: 150px;
+  margin: 20px auto 0;
+  border-radius: 30px;
 }
