--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
             <div class="col-sm-12 col-md-6">
               <h6>About Us</h6>
               <p class="text-justify">We are a group that likes to support local Irish businesses and smell nice while doing it.
-                <br>We aim to showcase and sell some of the best homemade fragrances found around Ireland
+                <br>We aim to showcase and sell some of the best homemade fragrances found around Ireland.
               </p>
             </div>
   
@@ -168,7 +168,7 @@
             <div class="col-xs-6 col-md-3">
                 <h6>Other</h6>
                 <ul class="footer-links">
-                  <li><a href='#'>Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
