--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
 <div class="container-fluid px-3">
     <div class="row">
         <div class="col-12 col-sm-6 p-4 my-auto">
-            <h1 class="font-black-bg">Random Trash</h1>
+            <h1 class="font-black-bg">404 error page</h1>
             <p class="font-black-bg">An error has occured, click <a href="{% url 'home' %}">here</a> to go to the home page.</p>
         </div>
     </div>
