--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,4 +1,3 @@
-
 {% extends "base.html" %}
 {% load static %}
 {% load crispy_forms_tags %}
@@ -45,7 +44,7 @@
                     {% endif %}
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> | 
                             <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
                         </small>
                     {% endif %}
@@ -58,16 +57,16 @@
                                 <div class="form-group w-50">
                                     <div class="input-group">
                                         <div class="input-group-prepend">
-                                            <button class="decrement-qty btn btn-black rounded-0"
+                                            <button class="decrement-qty btn btn-black rounded-0" 
                                                 data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
                                                 <span class="icon">
                                                     <i class="fas fa-minus"></i>
                                                 </span>
                                             </button>
                                         </div>
-                                        <input class="form-control qty_input" type="number"
-                                        name="quantity" value="1" min="1" max="99"
-                                        data-item_id="{{ product.id }}"
+                                        <input class="form-control qty_input" type="number" 
+                                        name="quantity" value="1" min="1" max="99" 
+                                        data-item_id="{{ product.id }}" 
                                         id="id_qty_{{ product.id }}">
                                         <div class="input-group-append">
                                             <button class="increment-qty btn btn-black rounded-0"
@@ -80,6 +79,7 @@
                                     </div>
                                 </div>
                             </div>
+
                             <div class="col-12">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
@@ -92,60 +92,44 @@
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
                         </div>
                     </form>
-                    <div class="col-md-12">
-                      <hr>
-                      {% if user.is_authenticated %}
-                      <form class="" action="{% url 'like_product' product.pk %}" method="POST">
-                        {% csrf_token %}
-                        {% if liked %}
-                        <button type="submit" style="font-weight: bold" name ="product_id" value = {{product.id}} class="btn btn-danger"><i class="fa fa-thumbs-down"></i> unlike this product</button>
-                        {% else %}
-                        <button type="submit" style="font-weight: bold" name ="product_id" value = {{product.id}} class="btn btn-light"><i class="fa fa-thumbs-up" aria-hidden="true"></i> like this product</button>
-                        {% endif %}
-                       </form>
-                       {% else %}
-                       <span><a style="color: blue" href="{% url 'account_login' %}">Login </a>to like this product.</span><br>
-                       {% endif %}
-                       <span style="font-weight: bold">Number of likes: {{total_likes}} likes</span>
-                      <hr>
-                    </div>
                 </div>
             </div>
-            </div>
-            </div>
-
-            <div class="container">
-                <div class="col-12">
+            <div>
+                <div class="col-1">
                     {% with comments.count as total_comments %}
                     <strong class="text-secondary"><i class="far fa-comments"></i>
                         <!-- Our total_comments variable goes before the closing strong tag -->
-                        Number of comments: {{ total_comments }}</strong>
+                        {{ total_comments }}</strong>
                     {% endwith %}
+                </div
+                <div class="row">
+                    <div class="col">
+                        <hr>
+                    </div>
                 </div>
                 <div class="row">
-        <div class="col-md-6 card mb-4  mt-3">
-            <h3 class="text-center mt-4">Comments</h3>
+        <div class="col-md-8 card mb-4  mt-3">
+            <h3>Comments:</h3>
             <div class="card-body">
                 <!-- We want a for loop inside the empty control tags to iterate through each comment in comments -->
                 {% for comment in comments %}
                 <div class="comments" style="padding: 10px;">
                     <p class="font-weight-bold">
-                      <span class=" text-muted font-weight-normal">
-                          <!-- The comment's created date goes here -->
-                          {{ comment.created_on }}
-                      </span><br>
                         <!-- The commenter's name goes here. Check the model if you're not sure what that is -->
-                        {{ comment.user }}
-                         wrote: <span style="font-weight: normal">{{ comment.body}}</span>
-                         <hr>
+                        {{ comment.name }}
+                        <span class=" text-muted font-weight-normal">
+                            <!-- The comment's created date goes here -->
+                            {{ comment.created_on }}
+                        </span> wrote:
                     </p>
                     <!-- The body of the comment goes before the | -->
+                    {{ comment.body | linebreaks }}
                 </div>
                 <!-- Our for loop ends here -->
                 {% endfor %}
             </div>
         </div>
-        <div class="col-md-6 card mb-4  mt-3">
+        <div class="col-md-4 card mb-4  mt-3 ">
             <div class="card-body">
                 <!-- For later -->
                 {% if commented %}
@@ -153,21 +137,18 @@
                     Your comment is awaiting approval
                 </div>
                 {% else %}
-                {% if request.user.is_authenticated %}
+                {% if user.is_authenticated %}
+
                 <h3>Leave a comment:</h3>
                 <p>Posting as: {{ user.username }}</p>
-                <form method="POST" action = "{% url 'product_detail' product.id %}" style="margin-top: 1.3em;">
+                <form method="post" style="margin-top: 1.3em;">
                     {{ comment_form | crispy }}
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-black rounded-0 text-uppercase mt-5">Submit</button>
+                    <button type="submit" class="btn btn-signup btn-lg">Submit</button>
                 </form>
-                {% else %}
-                <p><a style="color: blue" href="{% url 'account_login' %}">Login </a> to comment on this product</p>
                 {% endif %}
                 {% endif %}
         </div>
-    </div>
-    </div>
     </div>
 {% endblock %}
 
