--- a/static/css/base.css
+++ b/static/css/base.css
@@ -382,6 +382,7 @@ input[name='q']::placeholder {
   font-size:15px;
   line-height:24px;
   color:#737373;
+  margin-top: 1em;
 }
 .site-footer hr
 {
