--- a/templates/base.html
+++ b/templates/base.html
@@ -169,6 +169,7 @@
                 <h6>Other</h6>
                 <ul class="footer-links">
                   <li><a href="contact.html">Contact Us</a></li>
+                  <li><a href="#">Sign up for our Newsletter</a></li>
                 </ul>
               </div>
             </div>
