--- a/contacts/templates/contact.html
+++ b/contacts/templates/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="contact-container">
-        <form class="contact-form" onsubmit="sendEmail(); reset(); return false;">
+        <form class="contact-form" onsubmit="sendEmail(); reset();">
             <h3>Get in touch</h3>
             <input type="text" id="name" placeholder="Your Name" required>
             <input type="email" id="email" placeholder="Email Id" required>
