--- a/templates/base.html
+++ b/templates/base.html
@@ -139,7 +139,7 @@
     {% endblock %}
 
     {% block postloadjs %}
-    <script type="text/javascript">
+    <script>
         $('.toast').toast('show');
     </script>
     {% endblock %}
@@ -169,7 +169,7 @@
                 <h6>Other</h6>
                 <ul class="footer-links">
                   <li><a href="contact.html">Contact Us</a></li>
-                  <li><a href="#">Sign up for our Newsletter</a></li>
+                  <li><a href="contact.html">Sign up for our Newsletter</a></li>
                 </ul>
               </div>
             </div>
